rackoptix/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rackoptix
  labels:
    name: rackoptix
    app: rackoptix
